syntax = "proto3";

package com.hmproductions.bingo.actions;
option java_multiple_files = true;

import "models/Player.proto";

message AddPlayerRequest {
    models.Player player = 1;
    uint32 room_id = 2;
}

message AddPlayerResponse {

    enum StatusCode {
         OK = 0;
         ROOM_FULL = 1;
         ALREADY_IN_GAME = 2;
         ROOM_NOT_EXIST = 3;
         SERVER_ERROR = 4;
    }

    StatusCode status_code = 1;
    string status_message = 2;
    uint32 room_id = 3;
}
