syntax = "proto3";

package com.hmproductions.bingo.actions;

message GetGridSizeRequest {
    uint32 player_id = 1;
}

message GetGridSizeResponse {
    uint32 size = 1;
}
