syntax = "proto3";

package com.hmproductions.bingo.actions;
option java_multiple_files = true;

import "models/Player.proto";

message RemovePlayerRequest {
    models.Player player = 1;
}

message RemovePlayerResponse {

    enum StatusCode {
        OK = 0;
        NOT_JOINED = 1;
        INTERNAL_SERVER_ERROR = 2;
    }

    StatusCode status_code = 1;
    string status_message = 2;
}
