syntax = "proto3";

package com.hmproductions.bingo.actions;
option java_multiple_files = true;

message SetPlayerReadyRequest {
    uint32 player_id = 1;
    bool isReady = 2;
}

message SetPlayerReadyResponse {

    enum StatusCode {
        OK = 0;
        ROOM_NOT_EXI
        SERVER_ERROR = 2;
    }

    StatusCode status_code = 1;
    string status_message = 2;
    uint32 player_id = 3;
    bool isReady = 4;
}
